Change resutls section organisation

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -19,9 +19,9 @@
 \put(-110,-743){\rotatebox{90}{NNT: 2020UPASA000}}
 \end{picture}
 
-\vspace{-12mm}
-\flushright \includegraphics[height=2.1cm]{logo/cea.jpg} \hspace{7mm}
-\includegraphics[height=2.1cm]{logo/SOLEIL.png}
+% \vspace{-12mm}
+% \flushright \includegraphics[height=2.1cm]{logo/cea.jpg} \hspace{7mm}
+% \includegraphics[height=2.1cm]{logo/SOLEIL.png}
 
 %*****************************************************
 %******************** TITRE **************************
