--- a/main.tex
+++ b/main.tex
@@ -173,6 +173,8 @@
 \newcommand{\nitricoxide}{\ce{NO}\,}
 %{\textcolor{NitrogenOxideColor}
 
+\newcommand{\nitrogendioxide}{\ce{NO_2}\,}
+
 \newcommand{\dioxygen}{\ce{O_2}\,}
 %{\textcolor{OxygenColor}
 
@@ -224,7 +226,8 @@
 % Results
     \chapter{Results}
     \input{Sections/3_Results/BCDI}
-    \input{Sections/3_Results/SXRD}
+    \input{Sections/3_Results/111}
+    \input{Sections/3_Results/100}
     \input{Sections/3_Results/EmpiricalAnalysis}
     
 % Conclusion
