--- a/references.bib
+++ b/references.bib
@@ -20,7 +20,7 @@ and Isayev, Olexandr},
 title={Machine Learning Interatomic Potentials and Long-Range Physics},
 journal={The Journal of Physical Chemistry A},
 year={2023},
-month={Mar},
+month={03},
 day={23},
 publisher={American Chemical Society},
 volume={127},
@@ -5490,7 +5490,33 @@ The high temperature stability of thin film Pd2Si is controlled by time- tempera
    year = {2009},
    keywords = {Dislocation mechanics, Mesoscopic, Microdiffraction, Micropolar},
    pages = {3738--3753},
-   file = {ScienceDirect Full Text PDF:/Users/marieingridrichard/Zotero/storage/VRT882QZ/Nyilas et al. - 2009 - Synchrotron X-ray microdiffraction reveals rotatio.pdf:application/pdf;ScienceDirect Snapshot:/Users/marieingridrichard/Zotero/storage/JHA3K22U/S1359645409002432.html:text/html}
+}
+
+@article{Alexander1920,
+author = {Jerome Alexander },
+title = {The Award of the Nobel Prize to Professor Haber},
+journal = {Science},
+volume = {51},
+number = {1318},
+pages = {348-348},
+year = {1920},
+doi = {10.1126/science.51.1318.348.a},
+}
+
+@book{CHEN201931,
+title = {Chapter 2 - Electrochemical Dinitrogen Activation: To Find a Sustainable Way to Produce Ammonia},
+editor = {Stefania Albonetti and Siglinda Perathoner and Elsje Alessandra Quadrelli},
+series = {Studies in Surface Science and Catalysis},
+publisher = {Elsevier},
+volume = {178},
+pages = {31-46},
+year = {2019},
+booktitle = {Horizons in Sustainable Industrial Chemistry and Catalysis},
+issn = {0167-2991},
+doi = {https://doi.org/10.1016/B978-0-444-64127-4.00002-1},
+author = {Shiming Chen and Siglinda Perathoner and Claudio Ampelli and Gabriele Centi},
+keywords = {Ammonia, Electrocatalytic ammonia synthesis, Room temperature, Atmospheric pressure, Water},
+abstract = {A major challenge facing chemistry, in order to move to a sustainable, low-carbon future, is to avoid the use of fossil fuels to supply energy to drive chemical processes, which accounts for the largest part of carbon oxides emissions. A major effort is underway to develop novel synthetic paths using directly renewable energy (RE) sources to drive industrial processes [1]. With ammonia being the second largest-scale chemical (>150Mtonsy−1) with the top largest chemical process in terms of energy consumption (about 2.5EJ on a world scale), it does not surprise the fast emerging interest to develop new solutions to synthesize NH3 from N2 using RE for the process [2]. Between the various solutions under development, the electrocatalytic conversion of N2 is one of the most attracting and one of the challenging directions is the possibility of N2 and H2O co-electrolysis in very mild conditions, around room temperature and atmospheric pressure [2], [3], [4], [5], [6]. This solution also offers attractive possibilities for a distributed production of fertilizers [2].}
 }
 
 @article{alden_origin_1967,
