--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -9,12 +9,6 @@ First, environmental challenges concern minimizing and/or managing by-products, 
 Secondly, economical challenges which imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialization \parencite{Keisuke2019, Gunay2021}.
 For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
 
-Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
-Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
-Some of the major air pollutants such as nitrogen oxides, ($NO_x$), and particulate matter (PM) are emitted by road traffic (65\% of $NO_x$, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhanbitants.
-To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to $NO_2$ concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the WHO recommendations for PM$_{2.5}$ \parencite{AirParis}.
-Air quality is the main environmental concern of Ile-de-France residents (65\% of total mentions) ahead of climate change (63\%) and food (38\%) \parencite{AirParis}.
-
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2.png}
@@ -24,7 +18,50 @@ Air quality is the main environmental concern of Ile-de-France residents (65\% o
     \label{fig:NO2Paris}
 \end{figure}
 
+Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
+Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
+Some of the major air pollutants such as nitrogen oxides, ($NO_x$), and particulate matter (PM) are emitted by road traffic (65\% of $NO_x$, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhanbitants.
+To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to $NO_2$ concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the WHO recommendations for PM$_{2.5}$ \parencite{AirParis}.
+Air quality is the main environmental concern of Ile-de-France residents (65\% of total mentions) ahead of climate change (63\%) and food (38\%) \parencite{AirParis}.
+
 \section{The oxidation of Ammonia}
+
+The story of ammonia begins in the early 20th century \parencite{Alexander1920,CHEN201931} with the discovery of the Ostwald process in 1902 that permitted the synthesis of fertilizers from ammonia.
+Wilhelm Ostwald latter received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
+Seven years later, in 1909, Fritz Haber designed a process for the synthesis of ammonia which was later improved by Carl Bosch.
+It is today known as the Haber-Bosch process and is at the origin of the mass production of ammonia using metallic catalysts.
+First Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammonia from its elements"} and Carl Bosch in 1931 \textit{“in recognition of their contributions to the invention and development of chemical high pressure methods”}.
+
+\begin{figure}
+\centering
+\begin{tikzpicture}
+    \node (image) [anchor=south west, inner sep=0pt] {\includegraphics[width=0.99\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/worldindata/world-population-with-and-without-fertilizer.png}};
+    \begin{scope}[x={(image.south east)}, y={(image.north west)}]
+        \node [text width=2.2cm,align=right] at (0.18, 0.7) (OP) {\textcolor{Ostwald}{Ostwald} process\\(1902)\\ \textrightarrow Nobel prize\\(1909)};
+        \draw [-latex, ultra thick, Ostwald] (0.10,0.75) to (0.10,0.12);
+        \node [text width=2cm,align=right] at (0.19, 0.45) (HBP) {\textcolor{Haber}{Haber-Bosch}\\process (1908)\\ \textrightarrow Nobel prize\\(1918)};
+        \draw [-latex, ultra thick, Haber] (0.13,0.4) to (0.13,0.12);
+    \end{scope}
+\end{tikzpicture}
+\end{figure}
+
+\begin{align}
+    \label{eq:AmmoniaOxidation}
+    4 \ammonia + 3 \dioxygen & \rightarrow 6 \water + 2 \nitrogen \\
+    4 \ammonia + 4 \dioxygen & \rightarrow 6 \water + 2 \nitrousoxide \\
+    4 \ammonia + 5 \dioxygen & \rightarrow 6 \water + 4 \nitricoxide
+\end{align}
+
+\begin{align}
+    \label{eq:Stage2}
+    2 \nitricoxide + \dioxygen \rightarrow \nitrogendioxide \\
+    3 \nitrogendioxide + \water \rightarrow \nitricacid + \nitricoxide
+\end{align}
+
+\begin{align}
+    \label{eq:Stage3}
+    \nitricacid + \ammonia \rightarrow \ammoniumnitrate
+\end{align}
 
 Ammonia oxidation is an essential catalytic reaction used in the production of artificial fertilizers and in environmental applications. In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen. The selectivity toward either one is dictated by reaction parameters, that is, by temperature, \ammonia and \dioxygen partial pressures, and the type of catalyst.
 
