--- a/references.bib
+++ b/references.bib
@@ -2856,12 +2856,53 @@ keywords = {Catalysis, Hydrogenation, Nickel, Theory, Agriculture, Space technol
 abstract = {After a brief introduction on his youth and education, the paper concentrates on the origin and importance of the work of Paul Sabatier (1856–1941). After his “docteur ès sciences” thesis on sulphides in 1880 under the guidance of Marcellin Berthelot at Collège de France in Paris, and a very short stay at the University of Bordeaux to teach physics, he became Professor of Chemistry at the University of Toulouse from 1884 until he retired in 1930. Sabatier worked on different subjects (noteworthy is his book on agricultural chemistry) before concentrating on the subject which earned him the celebrity. The publications of Mond et al. (action of carbon monoxide on nickel) and of Moissan and Moureu (action of acetylene on nickel) are at the origin of the work of Sabatier and Senderens who discovered the method of direct hydrogenation of organic molecules on finely disintegrated nickel. The paper raises the question as to why the Nobel Committee did not use the word catalysis in the nomination concerning Sabatier. As a matter of fact, Sabatier not only used catalysts but also proposed the first chemical theory of catalysis based “on the temporary formation of unstable chemical compounds which, serving as intermediate steps in the reaction, determine its direction or increase its velocity”. Among all the physical and chemical theories of catalysis proposed so far, that of Sabatier has undergone the test of time with success and still continues to be fertile. Paul Sabatier leaves a considerable legacy, not only locally (he is at the origin of three Schools of the Institut National Polytechnique of Toulouse) but also internationally (major contribution to the development of agricultural chemistry and industrial catalysis) and beyond, notably with the so-called “Sabatier” reaction (CO2+4H2→CH4+2H2O) currently used in the International Space Station to produce the water necessary onboard.}
 }
 
+@article{Lorensen1987,
+author = {Lorensen, William E. and Cline, Harvey E.},
+title = {Marching Cubes: A High Resolution 3D Surface Construction Algorithm},
+year = {1987},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {21},
+number = {4},
+issn = {0097-8930},
+doi = {10.1145/37402.37422},
+abstract = {We present a new algorithm, called marching cubes, that creates triangle models of constant density surfaces from 3D medical data. Using a divide-and-conquer approach to generate inter-slice connectivity, we create a case table that defines triangle topology. The algorithm processes the 3D medical data in scan-line order and calculates triangle vertices using linear interpolation. We find the gradient of the original data, normalize it, and use it as a basis for shading the models. The detail in images produced from the generated surface models is the result of maintaining the inter-slice connectivity, surface data, and gradient information present in the original 3D data. Results from computed tomography (CT), magnetic resonance (MR), and single-photon emission computed tomography (SPECT) illustrate the quality and functionality of marching cubes. We also discuss improvements that decrease processing time and add solid modeling capabilities.},
+journal = {SIGGRAPH Comput. Graph.},
+month = {8},
+pages = {163–169},
+numpages = {7}
+}
+
 @online{WHOAirPollution,
   author = {WHO},
   title = {Air pollution},
   year = 2023,
   url = {https://www.who.int/health-topics/air-pollution},
   urldate = {2023-07-25}
+}
+
+@online{EPAGreenhouseGases,
+  author = {EPA},
+  title = {Greenhouse gases overview},
+  year = 2023,
+  url = {https://www.epa.gov/ghgemissions/overview-greenhouse-gases},
+  urldate = {2023-06-20}
+}
+
+@online{WorldDataFertilizer,
+  author = {OWID},
+  title = {Fertilizers},
+  year = 2023,
+  url = {https://ourworldindata.org/fertilizers},
+  urldate = {2023-02-15}
+}
+
+@online{MITCLIMATE,
+  author = {MIT},
+  title = {Greenhouse gases},
+  year = 2023,
+  url = {https://climate.mit.edu/explainers/greenhouse-gases},
+  urldate = {2023-04-20}
 }
 
 @online{AirParis,
@@ -3584,16 +3625,16 @@ Publisher: International Union of Crystallography},
    file = {Snapshot:/Users/marieingridrichard/Zotero/storage/LJ93GH56/paper.html:text/html},
 }
 
-
-@article{ahrens2005paraview,
-  title={Paraview: An end-user tool for large data visualization},
-  author={Ahrens, James and Geveci, Berk and Law, Charles},
-  journal={The visualization handbook},
-  volume={717},
-  number={8},
-  year={2005}
+@ARTICLE{Ahrens2001,
+  author={Ahrens, J. and Brislawn, K. and Martin, K. and Geveci, B. and Law, C.C. and Papka, M.},
+  journal={IEEE Computer Graphics and Applications},
+  title={Large-scale data visualization using parallel data streaming},
+  year={2001},
+  volume={21},
+  number={4},
+  pages={34-41},
+  doi={10.1109/38.933522}
 }
-
 
 @article{Lauraux2020,
 abstract = {Multi-wavelength (mw) Bragg coherent X-ray diffraction imaging (BCDI) is demonstrated on a single Au particle. The multi-wavelength Bragg diffraction patterns are inverted using conventional phase-retrieval algorithms where the dilation of the effective pixel size of a pixelated 2D detector caused by the variation of the X-ray beam energy is mitigated by interpolating the raw data. The reconstructed Bragg electron density and phase field are in excellent agreement with the results obtained from conventional rocking scans of the same particle. Voxel sizes of about 63 nm3 are obtained for reconstructions from both approaches. Phase shifts as small as 0.41 rad, which correspond to displacements of 14 pm and translate into strain resolution better than 10-4 in the Au particle, are resolved. The displacement field changes shape during the experiment, which is well reproduced by finite element method simulations considering an inhomogeneous strained carbon layer deposited on the Au particle over the course of the measurements. These experiments thus demonstrate the very high sensitivity of BCDI and mw-BCDI to strain induced by contaminations. Furthermore, mw-BCDI offers new opportunities for in situ and operando 3D strain imaging in complex sample environments.},
